# SmartPianoLightUI

./: .clang-format  .clang-tidy  .clang-uml  .envrc  .gitignore  CMakeLists.txt  Containerfile.cross  PROTOCOL.md  README.md  build-in-container.sh  cross-build.sh  flake.nix  garnix.yaml  garnix.yml  raspi.cmake  smartpiano.sh  ui.nix
include/: AppController.hpp  Communication.hpp  ITransport.hpp  Logger.hpp  Message.hpp  MusicUtils.hpp  Types.hpp  UI.hpp  UdsTransport.hpp
src/: AppController.cpp  CMakeLists.txt  Communication.cpp  MusicUtils.cpp  UI.cpp  UdsTransport.cpp  main.cpp
test/: .clang-tidy  CMakeLists.txt  InterfacePiano.h  LoggerTest.cpp  MessageTest.cpp  Mocks.hpp  MoteurJeu.h  UdsTransportTest.cpp  integrationTest.cpp  test.cpp
